# pori_graphkb_python

./: .gitignore  404.html  KBDEV_1086.py  MANIFEST.in  README.md  cancer_genes.txt  data_2.py  data_3.json  displayStatement.js  genes.txt  index.html  mkdocs.yml  moa.py  output.txt  package-lock.json  package.json  script_cancer_genes.py  script_conn.py  script_data.py  script_features.py  script_genes_get_gene_info.py  script_genes_oncokb.py  script_genes_predispositions.py  script_get_equivalent_features.py  script_match.py  script_positions.py  script_query.py  script_query_Infers.py  script_statement.py  script_struct.py  script_vocab.py  setup.cfg  setup.py  sitemap.xml  test.py  test1.py  tutorial.py  variants.tsv  variants_from_all_statements.py  x.json  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publishdevdocs.yml  pypipublish.yml  pytest.yml
docs/: generate-docs.sh  index.md  matching_algorithm.md  pori_graphkb_python_tutorial.ipynb  regenerate-reference.sh  tutorial.ipynb  tutorial.md  tutorial.py
docs/examples/: snpsift.md  (+2 more)
examples/: annotate_snpsift.py
graphkb/: __init__.py  constants.py  genes.py  match.py  preview.py  statement.py  types.py  util.py  vocab.py
knowledgebase_match/: __init__.py
matching/: .html  index.html
matching_algorithm/: index.html
search/: search_index.json
tests/: data.py  test_genes.py  test_graphkb.py  test_match.py  test_preview.py  test_statement.py  test_util.py  test_vocab.py
tools/: iprkb_analysis.py
tutorial/: index.html
usage_examples/: annotate_snpsift.py  snpsift  variant_strings
(+34 files in other folders)
