[flake8]
ignore = W503,E501,ANN002,ANN003,ANN101,ANN102,ANN202,ANN204

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true


[metadata]
name = graphkb
url = https://github.com/bcgsc/pori_graphkb_python
version = 1.14.0
author_email = graphkb@bcgsc.ca
description = python adapter for interacting with the GraphKB API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
dependency_links = []
include_package_data = True
install_requires =
    requests<2.29.0
    typing_extensions>=3.7.4.2,<4.4

[options.extras_require]
deploy = twine; wheel
test = pytest; pytest-runner; pytest-cov
doc = mkdocs; markdown_refdocs; mkdocs-material; mkdocs-redirects
dev =
    twine
    wheel
    pytest
    pytest-runner
    pytest-cov
    mkdocs
    markdown_refdocs
    mkdocs-material
    mkdocs-redirects
    black
    flake8
    flake8-annotations
    isort
    mypy

[options.package_data]
graphkb = py.typed
